plugins {
    id 'java-library'    
    // id 'steaminspect.java-conventions'
    id 'com.gradleup.shadow' version "9.4.1"
}


configurations {
    integrationTestImplementation.extendsFrom implementation
    integrationTestRuntimeOnly.extendsFrom runtimeOnly
}

repositories {
    mavenCentral()
}

group = project.group
version = project.version

sourceSets {    
    jna {        
        java {
            srcDirs = ['src/jna/java']
        }
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    registerFeature('jna') {
        usingSourceSet(sourceSets.jna)
    }
}


dependencies {    
    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'jakarta.json:jakarta.json-api:2.1.3'
    testRuntimeOnly 'org.eclipse.parsson:parsson:1.1.7'
    testImplementation 'com.google.jimfs:jimfs:1.3.1' // virtual fs for planned Steam discovery testing

    compileOnly 'io.soabase.record-builder:record-builder-core:52'
    annotationProcessor 'io.soabase.record-builder:record-builder-processor:52'
    
    jnaCompileOnly 'io.soabase.record-builder:record-builder-core:52'
    jnaAnnotationProcessor 'io.soabase.record-builder:record-builder-processor:52'
    jnaImplementation 'net.java.dev.jna:jna-platform:5.18.1'
}

jar {
    manifest {
        attributes(
                'Implementation-Title': project.name,
                'Implementation-Version': version,
                'Enable-Native-Access': 'ALL-UNNAMED'
        )
    }
}

tasks.register('jnaShadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
    archiveClassifier = 'jna-all'
    from sourceSets.jna.output
    configurations = [project.configurations.jnaRuntimeClasspath]
}

tasks.withType(Javadoc) {
    failOnError = false 
}

def networkTests = false;

if (project.hasProperty("network-test")) {
    networkTests = project["network-test"]
}

test {
    testLogging {
        events "passed", "skipped", "failed"
    }

    useJUnitPlatform {
        excludeTags 'network-test'
    }
}

tasks.register('integrationTest', Test) {
    description = 'Runs integration tests.'
    // group = 'verification'
    testClassesDirs += sourceSets.test.output.classesDirs
    classpath += sourceSets.test.runtimeClasspath
    shouldRunAfter test

    testLogging {
        events "passed"
    }

    useJUnitPlatform {
        includeTags 'network-test'
    }
}

final def jshPath = project.layout.buildDirectory.dir('jsh')

tasks.register("copyJsh", Copy) {
    from ("src/main/jshell" ) {
        include "*.jsh"
    }
    into jshPath
}

tasks.register("jnaCopyJsh", Copy) {
    from ("src/jna/jshell") {
        include "*.jsh"
    }
    into jshPath
}

tasks.register("jshell") {
    dependsOn tasks.named("copyJsh")
    dependsOn tasks.named("compileJava")
    dependsOn tasks.named("shadowJar").map { dep -> dep.archiveFile }


    def jsh = jshPath.get().file("main.jsh")
    dependsOn tasks.named("shadowJar").map { dep -> dep.archiveFile }
    def shadowJarPath = shadowJar.archiveFile.get()
    
    doLast {
        new ProcessBuilder('cmd', '/c', 'start', 'cmd.exe', '/k', "jshell.exe --class-path=${shadowJarPath} ${jsh}").start()
    }
}

tasks.register("jnaJshell") {

    dependsOn tasks.named("jnaCopyJsh")
    dependsOn tasks.named("compileJava")
    dependsOn tasks.named("jnaClasses")

    def jsh = jshPath.get().file("jna.jsh")

    dependsOn tasks.named("shadowJar").map { dep -> dep.archiveFile }
    dependsOn tasks.named("jnaShadowJar").map { dep -> dep.archiveFile }
    def shadowJarPath = shadowJar.archiveFile.get()
    def jnaShadowJar = jnaShadowJar.archiveFile.get()
        
    doLast {
        new ProcessBuilder('cmd', '/c', 'start', 'cmd.exe', '/k', "jshell.exe --class-path=${shadowJarPath};${jnaShadowJar} --enable-native-access=ALL-UNNAMED ${jsh}").start()
    }
}
